<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="current_version">2.2.1</string><string name="current_version_label">Version 2.2.1</string><string name="app_name">Sudo Installer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="warning">The sudo script will be installed to your device. This will modify system files, and is therefore dangerous. It is your responsibility if this messes up your device. This precedure requires that you have root! The status text below will automatically update when the procedure is complete.</string>
    <string name="install_button">Install Sudo</string>
    <string name="remove_button">Remove Sudo</string>
    <string name="installed">Sudo is Installed! :-)</string>
    <string name="not_installed">Sudo is not Installed. :-(</string>
    <string name="checking">Please wait…</string>
    <string name="sudo_download_path">/sdcard/sudo-temp</string>
    <string name="sudo_download_uri">http://dev.darkrealmgaming.com/androidsudo.txt</string>
    
    <string name="rootfail_title">Unable to Obtain Root Access</string>
    <string name="rootfail_message">We were not able to obtain root access! Are you properly rooted? Did you allow access to Sudo Installer?</string>
    <string name="retry">Try Again</string>
    <string name="about">About</string>
    <string name="title_activity_about">About Sudo Installer</string>
    <string name="about_title">Sudo for Android Installer</string>
    <string name="show_licenses">Open Source Licenses</string>
    <string name="github_uri">http://github.com/ColtonDRG/AndroidSudo</string>
    <string name="github_button">GitHub Project</string>
    <string name="title_activity_oss_licenses">Open Source Licenses</string>
    <string name="recovery_install_title">Recovery Install</string>
    <string name="recovery_install_message">Recovery Install will reboot your device to recovery mode, and install the sudo script as an update. This is useful on devices that have system write protection. This requires a custom recovery, such as TWRP or CWM. Your device will be rebooted. Tap/press back to cancel.</string>
    <string name="recovery_install_button">Recovery Install</string>
    <string name="install_text">Install</string>
    <string name="remove_text">Remove</string>
    <string name="none"/>
    

</resources>
