<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.darkrealmgaming.androidsudo.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/warning" />

    <Button
        android:id="@+id/installButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/warning"
        android:layout_alignRight="@+id/warning"
        android:layout_below="@+id/warning"
        android:text="@string/install_button" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/installButton"
        android:layout_below="@+id/installButton"
        android:text="@string/remove_button" />

    <TextView
        android:id="@+id/isInstalled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/removeButton"
        android:layout_below="@+id/removeButton"
        android:gravity="center"
        android:text="@string/checking"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/current_version" />

</RelativeLayout>